# rsp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md  clean.sh  cmake.sh  copyright.sh  protoc.sh  rebuild.sh  run-cli.sh  run-svr.sh  stop-svr.sh  test.sh
.github/workflows/: cmake-multi-platform.yml
demo/: record_demo.sh
gen-proto/: CMakeLists.txt
proto/common/: leave_room_reason.proto  message_type.proto  ping.proto  sender-type.proto
proto/room/: room.proto
proto/user/: login.proto  to_client.proto  to_room.proto
rsp-cli/: CMakeLists.txt  Makefile  build.sh  clean.sh  cmake.sh  rebuild.sh  run.sh  test.sh
rsp-cli/include/rspcli/prompt/: prompt.hpp
rsp-cli/include/rspcli/state/: context.hpp  factory.hpp  state.hpp  state_exit.hpp  state_in_room.hpp  state_init.hpp  state_login.hpp  types.hpp
rsp-cli/include/state/: state.hpp  state_login.hpp
rsp-cli/libs/: CMakeLists.txt
rsp-cli/src/: client.cpp  main.cpp
rsp-cli/src/state/: factory.cpp  state.cpp
rsp-libs/: CMakeLists.txt  test.sh
rsp-libs/include/rsplib/broker/: address.hpp  broker.hpp  broker_interface.hpp  cast_type.hpp  exception.hpp
rsp-libs/include/rsplib/broker/zeromq/: publisher.hpp  subscriber.hpp  zeromq.hpp
rsp-libs/include/rsplib/broker/zeromq/cppzmq/: zhelpers.hpp
rsp-libs/include/rsplib/buffer/: buffer.hpp  shared_const_buffer.hpp  shared_mutable_buffer.hpp
rsp-libs/include/rsplib/debug/: tracer.hpp
rsp-libs/include/rsplib/job/: job.hpp  job_scheduler.hpp
rsp-libs/include/rsplib/link/: link.hpp  link_impl.hpp  types.hpp
rsp-libs/include/rsplib/logger/: color.hpp  console_logger.hpp  flag.hpp  level.hpp  logger.hpp  streamable_logger.hpp
rsp-libs/include/rsplib/message/: conn_interpreter.hpp  helper.hpp  imemstream.hpp  message_dispatcher.hpp  message_dispatcher_interface.hpp  message_queue.hpp  serializer.hpp  types.hpp  util.hpp
rsp-libs/include/rsplib/server/: server_event.hpp  tcp_connection.hpp  tcp_server.hpp
rsp-libs/include/rsplib/thread/: thread_pool.hpp  thread_safe.hpp
rsp-libs/include/rsplib/util/: random.hpp
rsp-libs/src/broker/: broker.cpp
rsp-libs/src/logger/: console_logger.cpp  logger.cpp  streamable_logger.cpp
rsp-libs/src/message/: message_dispatcher.cpp
rsp-libs/src/server/: tcp_connection.cpp
rsp-libs/test/: broker_test.cpp  message_test.cpp  test.cpp  zmq_test.cpp
rsp-svr/: CMakeLists.txt  Makefile  build.sh  clean.sh  cmake.sh  opts.sh  run.sh  test.sh
rsp-svr/libs/: CMakeLists.txt
rsp-svr/libs/include/buffer/: shared_const_buffer.hpp
rsp-svr/libs/include/link/: link.hpp  link_impl.hpp
rsp-svr/libs/include/logger/: console_logger.hpp  flag.hpp  logger.hpp  streamable_logger.hpp
rsp-svr/libs/include/server/: server_event.hpp  tcp_connection.hpp  tcp_server.hpp
rsp-svr/libs/include/thread/: thread_pool.hpp
rsp-svr/libs/include/utils/: logger.hpp
rsp-svr/libs/src/logger/: console_logger.cpp  logger.cpp  streamable_logger.cpp
rsp-svr/libs/src/server/: tcp_connection.cpp
rsp-svr/libs/src/utils/: logger.cpp
rsp-svr/rci/include/room/contents_interface/: kick_out_reason.hpp  kickout_reason.hpp  room_api_interface.hpp  room_message_interface.hpp  so.hpp  types.hpp
rsp-svr/room/: CMakeLists.txt  config.h.in
rsp-svr/room/include/room/: types.hpp
rsp-svr/room/include/room/intranet/: intranet.hpp  message_dispatcher.hpp  message_trait.hpp  room_receiver.hpp  unicast_message_dispatcher.hpp  user_sender.hpp  user_topology.hpp
rsp-svr/room/include/room/room/: constant.hpp  room.hpp  room_api_interface.hpp  room_manager.hpp  room_message_handler.hpp  room_message_interface.hpp
rsp-svr/room/include/room/so/: so_factory.hpp  so_manager.hpp
rsp-svr/room/src/: main.cpp
rsp-svr/room/src/intranet/: intranet.cpp
rsp-svr/room/src/room/: room.cpp  room_manager.cpp  room_message_handler.cpp  room_receiver.cpp  so_manager.cpp
rsp-svr/room_contents/: CMakeLists.txt
rsp-svr/room_contents/include/room_contents/: contents.hpp  so.hpp
rsp-svr/room_contents/src/: contents.cpp  so.cpp
rsp-svr/user/: CMakeLists.txt  config.h.in
rsp-svr/user/include/: test.hpp
rsp-svr/user/include/job/: job_login.hpp
rsp-svr/user/include/message/: message_dispatcher.hpp
rsp-svr/user/include/server/: connection.hpp
rsp-svr/user/include/session/: session.hpp  session_manager.hpp
rsp-svr/user/include/user/: config.h
rsp-svr/user/include/user/intranet/: intranet.hpp  message_dispatcher.hpp  room_sender.hpp  types.hpp  unicast_message_dispatcher.hpp  user_receiver.hpp
rsp-svr/user/include/user/job/: job_cli_forward_message.hpp  job_create_room.hpp  job_forward_message.hpp  job_join_room.hpp  job_login.hpp  job_logout.hpp  job_ntf_leave_room_message.hpp  job_stop.hpp
rsp-svr/user/include/user/message/: message_dispatcher.hpp
rsp-svr/user/include/user/server/: connection.hpp  worker.hpp
rsp-svr/user/include/user/session/: session.hpp  session_manager.hpp
rsp-svr/user/src/: main.cpp
rsp-svr/user/src/intranet/: intranet.cpp
rsp-svr/user/src/server/: worker.cpp
rsp-svr/user/src/session/: session.cpp  session_manager.cpp
